apps/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  ports:
    - port: 8000
  selector:
    app: paperless-ngx
  type: ClusterIP
